Improve monthly report (#273)
* Add prev/next buttons to monthly report

---------

Co-authored-by: kaklakariada <kaklakariada@users.noreply.github.com>